--- a/index.html
+++ b/index.html
@@ -132,12 +132,28 @@
     >
       <div class="max-w-[1170px] mx-auto px-[15px]">
         <div class="grid sm:grid-cols-2 grid-cols-1 items-center">
-          <figure class="relative">
-            <img src="./images/image.png" alt="">
+
+          <figure class="relative sm:order-1 order-2">
+            <img src="./images/mobile_screen.png" alt="">
+            <div class="sm:w-[60%] w-[80%] absolute sm:left-[20%] left-[10%] border-[1px]
+             border-[#ccc] bottom-[0px] grid grid-cols-[70%_auto] bg-black items-center mx-auto">
+              <div class="grid grid-cols-[20%_auto]">
+                <img src="images/wednesday_movies.png" class="m-[20px]" alt="">
+                <div class="text-white ml-[30px] py-5 sm:leading-[15px] sm:text-2xl text-xl">
+                 <h3>Wednesday</h3>
+                 <br>Downloading...
+                </div>
+              </div>
+              <div>
+                <img class=""src="images/loading.gif" alt="">
+              </div>
+
+
+            </div>
            
           </figure>
 
-          <div class="text-white">
+          <div class="text-white sm:order-2 order-1">
             <h2 class="sm:text-[50px] text-[40px] font-bold sm:leading-[60px] leading-[50px]">
               Download your shows
               to watch offline.
