--- a/index.html
+++ b/index.html
@@ -132,31 +132,35 @@
     >
       <div class="max-w-[1170px] mx-auto px-[15px]">
         <div class="grid sm:grid-cols-2 grid-cols-1 items-center">
-
           <figure class="relative sm:order-1 order-2">
-            <img src="./images/mobile_screen.png" alt="">
-            <div class="sm:w-[60%] w-[80%] absolute sm:left-[20%] left-[10%] border-[1px]
-             border-[#ccc] bottom-[0px] grid grid-cols-[70%_auto] bg-black items-center mx-auto">
-              <div class="grid grid-cols-[20%_auto]">
-                <img src="images/wednesday_movies.png" class="m-[20px]" alt="">
-                <div class="text-white ml-[30px] py-5 sm:leading-[15px] sm:text-2xl text-xl">
-                 <h3>Wednesday</h3>
-                 <br>Downloading...
+            <img src="./images/mobile_screen.png" alt="" />
+            <div
+              class="sm:w-[60%] w-[90%] absolute sm:left-[20%] left-[5%] border-[1px] border-[#ccc] bottom-[0px] grid grid-cols-[70%_auto] bg-black items-center"
+            >
+              <div
+                class="grid grid-cols-[25%_auto] gap-[10px] p-[10px] items-center"
+              >
+                <img src="images/wednesday_movies.png" alt="" />
+                <div>
+                  <h3 class="text-white font-bold text-[14px]">Wednesday</h3>
+                  <span class="text-[blue]">Downloading... </span>
                 </div>
               </div>
               <div>
-                <img class=""src="images/loading.gif" alt="">
+                <img
+                  class=""
+                  src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/download-icon.gif"
+                  alt=""
+                />
               </div>
-
-
             </div>
-           
           </figure>
 
           <div class="text-white sm:order-2 order-1">
-            <h2 class="sm:text-[50px] text-[40px] font-bold sm:leading-[60px] leading-[50px]">
-              Download your shows
-              to watch offline.
+            <h2
+              class="sm:text-[50px] text-[40px] font-bold sm:leading-[60px] leading-[50px]"
+            >
+              Download your shows to watch offline.
             </h2>
             <p class="sm:text-[25px] text-[15px] pt-[30px]">
               Save your favorites easily and always have something to watch.
@@ -167,5 +171,300 @@
     </section>
 
     <!--Feature section end Download your shows-->
+
+    <!--Feature section watch everywhere start-->
+
+    <section
+      class="w-[100%] bg-black border-t-[8px] border-t-[#605d5d] sm:py-[50px] py-[50px]"
+    >
+      <div class="max-w-[1170px] mx-auto px-[15px]">
+        <div class="grid sm:grid-cols-2 grid-cols-1 items-center">
+          <div class="text-white">
+            <h2 class="sm:text-[50px] text-[40px] font-bold">
+              Watch everywhere
+            </h2>
+            <p class="sm:text-[25px] text-[15px] pt-[30px]">
+              Stream unlimed movies and TV shows on your phone, tablet, laptop,
+              and TV.
+            </p>
+          </div>
+          <figure class="relative">
+            <video
+              class="absolute w-[60%] bottom-[48%] left-[18%] z-[1]"
+              controls
+              autoplay
+              loop
+              muted
+            >
+              <source
+                src="./videos/Wednesday Addams - Season 02 First Trailer (2025) _ NETFLIX (4K) _ Jenna Ortega wednesday 2 trailer - Trailer Expo (1080p60, h264, youtube).mp4"
+                type="video/mp4"
+              />
+            </video>
+            <img
+              src="./images/desktop_screen.png"
+              alt="tv_screen"
+              class="relative z-[2]"
+            />
+          </figure>
+        </div>
+      </div>
+    </section>
+    <!--Feature section watch everywhere end-->
+
+    <!--Feature section create profie for kids start -->
+
+    <section
+      class="w-[100%] bg-black border-t-[8px] border-t-[#605d5d] sm:py-[80px] py-[50px]"
+    >
+      <div class="max-w-[1170px] mx-auto px-[15px]">
+        <div class="grid sm:grid-cols-2 grid-cols-1 items-center">
+          <figure class="relative sm:order-1 order-2">
+            <img
+              src="./images/children.png"
+              alt="tv_screen"
+              class="relative z-[2]"
+            />
+          </figure>
+
+          <div class="text-white sm:order-2 order-1">
+            <h2 class="sm:text-[50px] text-[40px] font-bold">
+              Create profiles for kids
+            </h2>
+            <p class="sm:text-[25px] text-[15px] pt-[30px]">
+              send children on adventures with their favorite characters in a
+              space made just for them—free with your membership.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!--Feature section create profie for kids end -->
+
+    <!--faq section start -->
+    <section
+      class="w-[100%] bg-black border-t-[8px] border-t-[#605d5d] sm:py-[80px] py-[50px]"
+    >
+      <div class="max-w-[1170px] mx-auto px-[15px]">
+        <h2
+          class="text-white mx-auto sm:text-[50px] text-[40px] font-bold text-center"
+        >
+          Frequently Asked Que0stions
+        </h2>
+
+        <div class="py-[30px]">
+          <div class="bg-[#2d2d2d] mb-[15px]">
+            <div
+              class="p-[20px] text-white sm:text-[30px] text-[20px] relative border-b-[2px] border-[black] hover:bg-[rgb(78,78,78)] duration-300 cursor-pointer faqQuestion"
+            >
+              <h3>What is Netflix?</h3>
+              <span class="absolute right-[20px] top-[15px]">+</span>
+            </div>
+            <div
+              class="text-white text-[20px] scale-y-0 h-[0px] origin-top duration-300"
+            >
+              <p>
+                Netflix is a streaming service that offers a wide variety of
+                award-winning TV shows, movies, anime, documentaries and more
+                -on thousands of internet-connected devices.
+              </p>
+              <p>
+                You can watch as much as you want, whenever you want, without a
+                single ad - all for low monthly price. There's always something
+                new to discover, and new TV shows and movies are added every
+                week!
+              </p>
+            </div>
+          </div>
+
+          <div class="bg-[#2d2d2d] mb-[15px]">
+            <div
+              class="p-[20px] text-white sm:text-[30px] text-[20px] relative border-b-[2px] border-[black] hover:bg-[rgb(78,78,78)] duration-300 cursor-pointer faqQuestion"
+            >
+              <h3>What is Netflix?</h3>
+              <span class="absolute right-[20px] top-[15px]">+</span>
+            </div>
+            <div
+              class="text-white text-[20px] scale-y-0 h-[0px] origin-top duration-300"
+            >
+              <p>
+                Netflix is a streaming service that offers a wide variety of
+                award-winning TV shows, movies, anime, documentaries and more
+                -on thousands of internet-connected devices.
+              </p>
+              <p>
+                You can watch as much as you want, whenever you want, without a
+                single ad - all for low monthly price. There's always something
+                new to discover, and new TV shows and movies are added every
+                week!
+              </p>
+            </div>
+          </div>
+
+          <div class="bg-[#2d2d2d] mb-[15px]">
+            <div
+              class="p-[20px] text-white sm:text-[30px] text-[20px] relative border-b-[2px] border-[black] hover:bg-[rgb(78,78,78)] duration-300 cursor-pointer faqQuestion"
+            >
+              <h3>What is Netflix?</h3>
+              <span class="absolute right-[20px] top-[15px]">+</span>
+            </div>
+            <div
+              class="text-white text-[20px] scale-y-0 h-[0px] origin-top duration-300"
+            >
+              <p>
+                Netflix is a streaming service that offers a wide variety of
+                award-winning TV shows, movies, anime, documentaries and more
+                -on thousands of internet-connected devices.
+              </p>
+              <p>
+                You can watch as much as you want, whenever you want, without a
+                single ad - all for low monthly price. There's always something
+                new to discover, and new TV shows and movies are added every
+                week!
+              </p>
+            </div>
+          </div>
+
+          <div class="bg-[#2d2d2d] mb-[15px]">
+            <div
+              class="p-[20px] text-white sm:text-[30px] text-[20px] relative border-b-[2px] border-[black] hover:bg-[rgb(78,78,78)] duration-300 cursor-pointer faqQuestion"
+            >
+              <h3>What is Netflix?</h3>
+              <span class="absolute right-[20px] top-[15px]">+</span>
+            </div>
+            <div
+              class="text-white text-[20px] scale-y-0 h-[0px] origin-top duration-300"
+            >
+              <p>
+                Netflix is a streaming service that offers a wide variety of
+                award-winning TV shows, movies, anime, documentaries and more
+                -on thousands of internet-connected devices.
+              </p>
+              <p>
+                You can watch as much as you want, whenever you want, without a
+                single ad - all for low monthly price. There's always something
+                new to discover, and new TV shows and movies are added every
+                week!
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <!--second email section part start-->
+        <p class="text-[20px] text-white text-center">
+          Ready to watch? Enter your email to create or restart your membership.
+        </p>
+
+        <div class="max-w-[700px] sm:px-[10px] px-[40px] mx-auto mt-[30px]">
+          <form
+            class="grid sm:grid-cols-[70%_auto] grid-cols-1 gap-[10px]"
+            action=""
+          >
+            <input
+              type="text"
+              class="border-[1px] h-[50px] pl-[20px] border-[#ccc] bg-[transparent]"
+              placeholder="Email Address.."
+            />
+            <button
+              class="text-xl bg-red-500 rounded-[5px] px-[10px] py-[10px] hover:bg-[rgb(193,17,25)] duration-300"
+            >
+              Get Started >
+            </button>
+          </form>
+        </div>
+
+        <!--second email section part end-->
+      </div>
+    </section>
+    <!--faq end here-->
+
+    <!--footer section start-->
+    <footer
+      class="w-[100%] bg-[black] border-t-[8px] border-t-[#605d5d] sm:py-[80px] py-[50px]"
+    >
+      <div class="max-w-[1170px] mx-auto px-[15px]">
+        <h3 class="text-[#ccc] text-[18px]">
+          Questions? Call <a href="phone:+977-9804223473" class="underline">+977-9804223473</a>
+        </h3>
+        <div class="py-[30px] grid sm:grid-cols-3 grid-cols-1">
+          <div>
+            <ul class="text-[#ccc]">
+              <li class="mb-[10px]"><a class="underline" href="#">FAQ</a></li>
+              <li class="mb-[10px]"><a class="underline" href="#">Media Centre</a></li>
+              <li class="mb-[10px]"><a class="underline" href="#">Ways to watch</a></li>
+              <li class="mb-[10px]"><a class="underline" href="#">Cookie Preferences</a></li>
+              <li class="mb-[10px]"><a class="underline" href="#">Speed Test</a></li>
+            </ul>
+          </div>
+          <div>
+            <ul class="text-[#ccc]">
+              <li class="mb-[10px]"><a class="underline" href="#">Help Centre</a></li>
+              <li class="mb-[10px]"><a class="underline" href="#">Investor Relations</a></li>
+              <li class="mb-[10px]"><a class="underline" href="#">Terms of Use</a></li>
+              <li class="mb-[10px]"><a class="underline" href="#">Corporate Information</a></li>
+              <li class="mb-[10px]"><a class="underline" href="#">Legal Notices</a></li>
+            </ul>
+          </div>
+          <div>
+            <ul class="text-[#ccc]">
+              <li class="mb-[10px]"><a class="underline" href="#">Account</a></li>
+              <li class="mb-[10px]"><a class="underline" href="#">Jobs</a></li>
+              <li class="mb-[10px]"><a class="underline" href="#">Privacy</a></li>
+              <li class="mb-[10px]"><a class="underline" href="#">Contact Us</a></li>
+              <li class="mb-[10px]"><a class="underline" href="#">Only on Netflix</a></li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="relative mb-[10px]">
+          <img
+            src="./images/globe_icon.png"
+            alt="globe_icon"
+            class="w-5 h-5 absolute top-[7px] left-[5px]"
+          />
+
+          <select
+            name=""
+            id=""
+            class="bg-[black] text-white border-[1px] border-[white] sm:p-[5px_25px] p-[7px_20px] rounded-[5px]"
+          >
+            <option value="">English</option>
+            <option value="">Nepali</option>
+          </select>
+        </div>
+
+        <div class="text-[#ccc]">
+          <h3>Nextflix | Nepal</h3>
+          <p>Clone By <span class="font-bold underline">Dipesh Deula</span></p>
+        </div>
+
+      </div>
+    </footer>
+
+    <!--footer section end-->
+
+    <script>
+      let allquestions = document.querySelectorAll(".faqQuestion");
+      allquestions.forEach((v, index) => {
+        v.addEventListener("click", () => {
+          v.nextElementSibling.classList.toggle("h-[auto]");
+          v.nextElementSibling.classList.toggle("scale-y-100");
+          v.nextElementSibling.classList.toggle("p-[20px]");
+          v.children[1].classList.toggle("rotate-45");
+
+          allquestions.forEach((element, i) => {
+            if (i != index) {
+              element.nextElementSibling.classList.remove(
+                "h-[auto]",
+                "scale-y-100",
+                "p-[20px]"
+              );
+              element.children[1].classList.remove("rotate-45");
+            }
+          });
+        });
+      });
+    </script>
   </body>
 </html>
