social media updated

--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
 
         <div class="text-[#ccc]">
           <h3>Nextflix | Nepal</h3>
-          <p>Clone By <span class="font-bold underline">Dipesh Deula</span></p>
+          <p>Clone By <a href="https://www.linkedin.com/in/dipesh-deula-245608258/" class="underline font-bold">Dipesh Deula</a></p>
         </div>
 
       </div>
