login form updated

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                   <option value="">Nepali</option>
                 </select>
               </div>
-              <button class="bg-[red] text-white rounded-[5px] px-[10px]">
-                Sign In
+              <button class="bg-[red] text-white rounded-[5px] px-[10px]"><a href="login.html" target="_parent"> Sign In</a>
+              
               </button>
             </div>
           </div>
