--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                   <option value="">Nepali</option>
                 </select>
               </div>
-              <button class="bg-[red] text-white rounded-[5px] px-[10px]"><a href="login.html" target="_parent"> Sign In</a>
-              
+              <button class="bg-[red] text-white rounded-[5px] px-[10px]">
+                <a href="login.html" target="_parent"> Sign In</a>
               </button>
             </div>
           </div>
@@ -250,7 +250,7 @@
         <h2
           class="text-white mx-auto sm:text-[50px] text-[40px] font-bold text-center"
         >
-          Frequently Asked Que0stions
+          Frequently Asked Questions
         </h2>
 
         <div class="py-[30px]">
@@ -282,22 +282,16 @@
             <div
               class="p-[20px] text-white sm:text-[30px] text-[20px] relative border-b-[2px] border-[black] hover:bg-[rgb(78,78,78)] duration-300 cursor-pointer faqQuestion"
             >
-              <h3>What is Netflix?</h3>
+              <h3>How much does Netflix cost?</h3>
               <span class="absolute right-[20px] top-[15px]">+</span>
             </div>
             <div
               class="text-white text-[20px] scale-y-0 h-[0px] origin-top duration-300"
             >
               <p>
-                Netflix is a streaming service that offers a wide variety of
-                award-winning TV shows, movies, anime, documentaries and more
-                -on thousands of internet-connected devices.
-              </p>
-              <p>
-                You can watch as much as you want, whenever you want, without a
-                single ad - all for low monthly price. There's always something
-                new to discover, and new TV shows and movies are added every
-                week!
+                Watch Netflix on your smartphone, tablet, Smart TV, laptop, or
+                streaming device, all for one fixed monthly fee. Plans range
+                from USD 2.99 to USD 9.99 a month. No extra costs, no contracts.
               </p>
             </div>
           </div>
@@ -306,22 +300,23 @@
             <div
               class="p-[20px] text-white sm:text-[30px] text-[20px] relative border-b-[2px] border-[black] hover:bg-[rgb(78,78,78)] duration-300 cursor-pointer faqQuestion"
             >
-              <h3>What is Netflix?</h3>
+              <h3>Where can I watch?</h3>
               <span class="absolute right-[20px] top-[15px]">+</span>
             </div>
             <div
               class="text-white text-[20px] scale-y-0 h-[0px] origin-top duration-300"
             >
               <p>
-                Netflix is a streaming service that offers a wide variety of
-                award-winning TV shows, movies, anime, documentaries and more
-                -on thousands of internet-connected devices.
+                Watch anywhere, anytime. Sign in with your Netflix account to
+                watch instantly on the web at netflix.com from your personal
+                computer or on any internet-connected device that offers the
+                Netflix app, including smart TVs, smartphones, tablets,
+                streaming media players and game consoles.
               </p>
               <p>
-                You can watch as much as you want, whenever you want, without a
-                single ad - all for low monthly price. There's always something
-                new to discover, and new TV shows and movies are added every
-                week!
+                You can also download your favourite shows with the ios or
+                Android app. Use downloads to watch while you're on the go and
+                without an internet connection. Take Netflix with you anywhere.
               </p>
             </div>
           </div>
@@ -330,22 +325,58 @@
             <div
               class="p-[20px] text-white sm:text-[30px] text-[20px] relative border-b-[2px] border-[black] hover:bg-[rgb(78,78,78)] duration-300 cursor-pointer faqQuestion"
             >
-              <h3>What is Netflix?</h3>
+              <h3>How do I cancel?</h3>
               <span class="absolute right-[20px] top-[15px]">+</span>
             </div>
             <div
               class="text-white text-[20px] scale-y-0 h-[0px] origin-top duration-300"
             >
               <p>
-                Netflix is a streaming service that offers a wide variety of
-                award-winning TV shows, movies, anime, documentaries and more
-                -on thousands of internet-connected devices.
+                Netflix is flexible. There are no pesky contracts and no
+                commitments. You can easily cancel your account online in two
+                clicks. There are no cancellation fees – start or stop your
+                account anytime.
+              </p>
+            </div>
+          </div>
+
+          <div class="bg-[#2d2d2d] mb-[15px]">
+            <div
+              class="p-[20px] text-white sm:text-[30px] text-[20px] relative border-b-[2px] border-[black] hover:bg-[rgb(78,78,78)] duration-300 cursor-pointer faqQuestion"
+            >
+              <h3>What can I watch on Netflix?</h3>
+              <span class="absolute right-[20px] top-[15px]">+</span>
+            </div>
+            <div
+              class="text-white text-[20px] scale-y-0 h-[0px] origin-top duration-300"
+            >
+              <p>
+                Netflix has an extensive library of feature films,
+                documentaries, TV shows, anime, award-winning Netflix originals,
+                and more. Watch as much as you want, anytime you want.
+              </p>
+            </div>
+          </div>
+
+          <div class="bg-[#2d2d2d] mb-[15px]">
+            <div
+              class="p-[20px] text-white sm:text-[30px] text-[20px] relative border-b-[2px] border-[black] hover:bg-[rgb(78,78,78)] duration-300 cursor-pointer faqQuestion"
+            >
+              <h3>Is Netflix good for kids?</h3>
+              <span class="absolute right-[20px] top-[15px]">+</span>
+            </div>
+            <div
+              class="text-white text-[20px] scale-y-0 h-[0px] origin-top duration-300"
+            >
+              <p>
+                The Netflix Kids experience is included in your membership to
+                give parents control while kids enjoy family-friendly TV shows
+                and movies in their own space.
               </p>
               <p>
-                You can watch as much as you want, whenever you want, without a
-                single ad - all for low monthly price. There's always something
-                new to discover, and new TV shows and movies are added every
-                week!
+                The Netflix Kids experience is included in your membership to
+                give parents control while kids enjoy family-friendly TV shows
+                and movies in their own space.
               </p>
             </div>
           </div>
@@ -385,34 +416,61 @@
     >
       <div class="max-w-[1170px] mx-auto px-[15px]">
         <h3 class="text-[#ccc] text-[18px]">
-          Questions? Call <a href="phone:+977-9804223473" class="underline">+977-9804223473</a>
+          Questions? Call
+          <a href="phone:+977-9804223473" class="underline">+977-9804223473</a>
         </h3>
         <div class="py-[30px] grid sm:grid-cols-3 grid-cols-1">
           <div>
             <ul class="text-[#ccc]">
               <li class="mb-[10px]"><a class="underline" href="#">FAQ</a></li>
-              <li class="mb-[10px]"><a class="underline" href="#">Media Centre</a></li>
-              <li class="mb-[10px]"><a class="underline" href="#">Ways to watch</a></li>
-              <li class="mb-[10px]"><a class="underline" href="#">Cookie Preferences</a></li>
-              <li class="mb-[10px]"><a class="underline" href="#">Speed Test</a></li>
+              <li class="mb-[10px]">
+                <a class="underline" href="#">Media Centre</a>
+              </li>
+              <li class="mb-[10px]">
+                <a class="underline" href="#">Ways to watch</a>
+              </li>
+              <li class="mb-[10px]">
+                <a class="underline" href="#">Cookie Preferences</a>
+              </li>
+              <li class="mb-[10px]">
+                <a class="underline" href="#">Speed Test</a>
+              </li>
             </ul>
           </div>
           <div>
             <ul class="text-[#ccc]">
-              <li class="mb-[10px]"><a class="underline" href="#">Help Centre</a></li>
-              <li class="mb-[10px]"><a class="underline" href="#">Investor Relations</a></li>
-              <li class="mb-[10px]"><a class="underline" href="#">Terms of Use</a></li>
-              <li class="mb-[10px]"><a class="underline" href="#">Corporate Information</a></li>
-              <li class="mb-[10px]"><a class="underline" href="#">Legal Notices</a></li>
+              <li class="mb-[10px]">
+                <a class="underline" href="#">Help Centre</a>
+              </li>
+              <li class="mb-[10px]">
+                <a class="underline" href="#">Investor Relations</a>
+              </li>
+              <li class="mb-[10px]">
+                <a class="underline" href="#">Terms of Use</a>
+              </li>
+              <li class="mb-[10px]">
+                <a class="underline" href="#">Corporate Information</a>
+              </li>
+              <li class="mb-[10px]">
+                <a class="underline" href="#">Legal Notices</a>
+              </li>
             </ul>
           </div>
           <div>
             <ul class="text-[#ccc]">
-              <li class="mb-[10px]"><a class="underline" href="#">Account</a></li>
+              <li class="mb-[10px]">
+                <a class="underline" href="#">Account</a>
+              </li>
               <li class="mb-[10px]"><a class="underline" href="#">Jobs</a></li>
-              <li class="mb-[10px]"><a class="underline" href="#">Privacy</a></li>
-              <li class="mb-[10px]"><a class="underline" href="#">Contact Us</a></li>
-              <li class="mb-[10px]"><a class="underline" href="#">Only on Netflix</a></li>
+              <li class="mb-[10px]">
+                <a class="underline" href="#">Privacy</a>
+              </li>
+              <li class="mb-[10px]">
+                <a class="underline" href="#">Contact Us</a>
+              </li>
+              <li class="mb-[10px]">
+                <a class="underline" href="#">Only on Netflix</a>
+              </li>
             </ul>
           </div>
         </div>
@@ -436,9 +494,15 @@
 
         <div class="text-[#ccc]">
           <h3>Nextflix | Nepal</h3>
-          <p>Clone By <a href="https://www.linkedin.com/in/dipesh-deula-245608258/" class="underline font-bold cursor-pointer">Dipesh Deula</a></p>
+          <p>
+            Clone By
+            <a
+              href="https://www.linkedin.com/in/dipesh-deula-245608258/"
+              class="underline font-bold cursor-pointer"
+              >Dipesh Deula</a
+            >
+          </p>
         </div>
-
       </div>
     </footer>
 
